<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sae.facepredictor.ui.main.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_prediction"
        android:name="com.sae.facepredictor.ui.main.PredictionFragment"
        android:label="@string/nav_prediction"
        tools:layout="@layout/fragment_prediction" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.sae.facepredictor.ui.main.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.sae.facepredictor.ui.main.AccountFragment"
        android:label="@string/nav_account"
        tools:layout="@layout/fragment_account" />

</navigation>
